--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_DESC: "Fedora Cosmic Atomic with Universal Blue tooling"
-  IMAGE_KEYWORDS: "bootc,ublue,universal-blue,atomic,desktop,fedora,cosmic"
   IMAGE_LOGO_URL: "https://gemini.google.com/share/701048dd5d3e"  # Put your own image here for a fancy profile on https://artifacthub.io/!
-  IMAGE_NAME: "${{ github.event.repository.name }}"  # output image name, usually same as repo name
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"  # do not edit
   DEFAULT_TAG: "latest"
 
@@ -27,8 +24,26 @@ concurrency:
 
 jobs:
   build_push:
-    name: Build and push image
+    name: Build ${{ matrix.base_name }}
     runs-on: ubuntu-24.04
+    
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - base_name: cosmic
+            base_image: quay.io/fedora-ostree-desktops/cosmic-atomic:43
+            image_desc: "Fedora Cosmic Atomic with developer tooling"
+            image_keywords: "bootc,atomic,desktop,fedora,cosmic,developer"
+          - base_name: aurora
+            base_image: ghcr.io/ublue-os/aurora:stable
+            image_desc: "Aurora (uBlue) with developer tooling"
+            image_keywords: "bootc,ublue,universal-blue,atomic,desktop,aurora,developer"
+          # Uncomment to add more variants:
+          # - base_name: bluefin
+          #   base_image: ghcr.io/ublue-os/bluefin:stable
+          #   image_desc: "Bluefin (uBlue) with developer tooling"
+          #   image_keywords: "bootc,ublue,universal-blue,atomic,desktop,bluefin,developer"
 
     permissions:
       contents: read
@@ -40,7 +55,11 @@ jobs:
         run: |
           # Lowercase the image uri
           echo "IMAGE_REGISTRY=${IMAGE_REGISTRY,,}" >> ${GITHUB_ENV}
+          # Image name includes base variant: tanzanite-cosmic, tanzanite-aurora, etc.
+          IMAGE_NAME="${{ github.event.repository.name }}-${{ matrix.base_name }}"
           echo "IMAGE_NAME=${IMAGE_NAME,,}" >> ${GITHUB_ENV}
+          echo "IMAGE_DESC=${{ matrix.image_desc }}" >> ${GITHUB_ENV}
+          echo "IMAGE_KEYWORDS=${{ matrix.image_keywords }}" >> ${GITHUB_ENV}
 
       # These stage versions are pinned by https://github.com/renovatebot/renovate
       - name: Checkout
@@ -110,8 +129,9 @@ jobs:
         with:
           containerfiles: |
             ./Containerfile
-          # Postfix image name with -custom to make it a little more descriptive
-          # Syntax: https://docs.github.com/en/actions/learn-github-actions/expressions#format
+          build-args: |
+            BASE_IMAGE=${{ matrix.base_image }}
+            BASE_NAME=${{ matrix.base_name }}
           image: ${{ env.IMAGE_NAME }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
