--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,6 +123,12 @@ jobs:
           sep-tags: " "
           sep-annotations: " "
 
+      # Pull previous image for layer caching (speeds up rebuilds significantly)
+      - name: Pull previous image for cache
+        run: |
+          podman pull ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }} || true
+        continue-on-error: true
+
       - name: Build Image
         id: build_image
         uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2
@@ -136,6 +142,9 @@ jobs:
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
           oci: false
+          extra-args: |
+            --cache-from=${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}
+            --layers
 
       # Rechunk is a script that we use on Universal Blue to make sure there isnt a single huge layer when your image gets published.
       # This does not make your image faster to download, just provides better resumability and fixes a few errors.
