Add BlueBuild migration planning and initial GitHub Actions workflow
TEAM_006: Create comprehensive 3-phase migration plan to move from hand-rolled Containerfile+bash build system to BlueBuild's declarative recipe.yml framework. Phase 1 (Discovery) maps current 7-module bash architecture to BlueBuild equivalents, identifies behavioral contracts (image output, installed tools, environment variables, cosign signing), and documents constraints around rpm-ostree symlinks requiring manual /root, /opt, /usr/local conversion

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - base_name: cosmic
-            base_image: quay.io/fedora-ostree-desktops/cosmic-atomic:43
-            image_desc: "Fedora Cosmic Atomic with developer tooling"
-            image_keywords: "bootc,atomic,desktop,fedora,cosmic,developer"
           - base_name: aurora
             base_image: ghcr.io/ublue-os/aurora:stable
             image_desc: "Aurora (uBlue) with developer tooling"
@@ -55,7 +51,7 @@ jobs:
         run: |
           # Lowercase the image uri
           echo "IMAGE_REGISTRY=${IMAGE_REGISTRY,,}" >> ${GITHUB_ENV}
-          # Image name includes base variant: tanzanite-cosmic, tanzanite-aurora, etc.
+          # Image name includes base variant: tanzanite-aurora, etc.
           IMAGE_NAME="${{ github.event.repository.name }}-${{ matrix.base_name }}"
           echo "IMAGE_NAME=${IMAGE_NAME,,}" >> ${GITHUB_ENV}
           echo "IMAGE_DESC=${{ matrix.image_desc }}" >> ${GITHUB_ENV}
