Update image name to tanzanite-aurora variant and fix Flutter tar ownership errors
TEAM_006: Change IMAGE_NAME in build-disk.yml from tanzanite to tanzanite-aurora to match Aurora-based variant. Update README from generic image-template documentation to Tanzanite-specific content describing included languages (Python/Go/Rust/Node/Bun/Flutter), dev tools (Android SDK, Gradle, Windsurf, containers), and build essentials. Update all disk_config/*.toml files to reference ghcr.io/veighnsche/tanzanite-aurora:

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,8 +1,7 @@
-# This file is completely optional, but if you want to index your image on https://artifacthub.io/ you can 
-# Sign up and add the Repository ID to the right field. Owners fields are optional.
-# Examples: https://artifacthub.io/packages/search?ts_query_web=ublue&sort=relevance&page=1 
+# Artifacthub configuration for indexing on https://artifacthub.io/
+# To use: Sign up on artifacthub.io and add your Repository ID below
+# See: https://artifacthub.io/packages/search?ts_query_web=ublue&sort=relevance&page=1
 
-repositoryID: my-custom-id-here # Fill in with your own credentials 
-owners: # (optional, used to claim repository ownership)
-  - name: My Name
-    email: my_email@email.com
+repositoryID: # TODO: Add your artifacthub repository ID if publishing
+owners:
+  - name: veighnsche
