--- a/disk_config/iso-gnome.toml
+++ b/disk_config/iso-gnome.toml
@@ -1,7 +1,7 @@
 [customizations.installer.kickstart]
 contents = """
 %post
-bootc switch --mutate-in-place --transport registry ghcr.io/veighnsche/tanzanite:latest
+bootc switch --mutate-in-place --transport registry ghcr.io/veighnsche/tanzanite-aurora:latest
 %end
 """
 
