Switch Aurora base image from standard to DX variant for enhanced developer experience
TEAM_006: Change base-image from ghcr.io/ublue-os/aurora to ghcr.io/ublue-os/aurora-dx since DX variant includes pre-configured developer tools and optimizations that align better with Tanzanite's developer-focused toolchain additions.

--- a/recipes/recipe-aurora.yml
+++ b/recipes/recipe-aurora.yml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
 name: tanzanite-aurora
 description: Aurora (uBlue) with developer tooling
-base-image: ghcr.io/ublue-os/aurora
+base-image: ghcr.io/ublue-os/aurora-dx
 image-version: stable
 
 modules:
