Restore Java and archive utilities to packages.yml after build failure with missing dependencies
TEAM_009: Re-add java-21-openjdk-devel, unzip, zip, and xz to packages.yml since install-android-sdk.sh and install-gradle.sh require these dependencies during build time. Previous "Strict Delta" removal assumed aurora-dx provided these at script execution time, but build environment lacked them. Transition to "Conservative Delta" approach that avoids bloat while ensuring all scripted installation steps have require

--- a/recipes/modules/packages.yml
+++ b/recipes/modules/packages.yml
@@ -25,5 +25,13 @@ install:
     - ncurses-devel
     - readline-devel
 
+    # Java Development (Needed for Android SDK & Gradle)
+    - java-21-openjdk-devel
+
+    # Essential Build Utilities (Ensure availability for install scripts)
+    - unzip
+    - zip
+    - xz
+
     # Additional utilities
     - mosh
