--- a/files/system/usr/lib/tmpfiles.d/tanzanite-caches.conf
+++ b/files/system/usr/lib/tmpfiles.d/tanzanite-caches.conf
@@ -1,13 +1,28 @@
 # TEAM_009: Tanzanite writable cache directories
 # These directories are used by various language toolchains and MCP servers.
 # In an immutable OS, /usr is read-only, so we move global caches to /var/cache.
+#
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# - Read previous team files before modifying
+# - Test changes don't break existing functionality
+# - DO NOT assume based on training data - VERIFY with live sources
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+# TEAM_011 WARNING: ALWAYS VERIFY ASSUMPTIONS BEFORE CHANGING THIS FILE!
+#
 
 # Type Path        Mode UID  GID  Age Argument
 d /var/cache/npm-cache 0777 root root -
 d /var/cache/pnpm      0777 root root -
 d /var/cache/corepack  0777 root root -
 d /var/cache/uv-cache  0777 root root -
-d /var/cache/uv-tools  0777 root root -
+# uv-tools moved to /usr/share/uv-tools (persisted in ostree image)
 d /var/cache/go        0777 root root -
 d /var/cache/bun-cache 0777 root root -
 d /var/cache/pub-cache 0777 root root -
