--- a/recipes/modules/android.yml
+++ b/recipes/modules/android.yml
@@ -1,5 +1,9 @@
 # TEAM_006: Android development tools
+# TEAM_012: Added Kotlin, Scala, Maven for complete Android/JVM toolchain
 type: script
 scripts:
   - install-android-sdk.sh
+  - install-kotlin.sh
+  - install-scala.sh
+  - install-maven.sh
   - install-scrcpy.sh
